--- a/tower/templates/index.html
+++ b/tower/templates/index.html
@@ -1,7 +1,53 @@
 <!doctype html>
 <html lang="en">
   <head>
-    <script src="https://code.jquery.com/jquery.min.js"></script>
+    <meta charset="utf-8">
+   
+   <!-- optimize mobile versions -->
+   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+   
+      <!-- The "minimalist" skin - choose from: "functional.css", "minimalist.css", "playful.css" -->
+   <link rel="stylesheet" href="//releases.flowplayer.org/6.0.5/skin/minimalist.css">
+      <!-- the quality selector stylesheet -->
+   <link rel="stylesheet" href="//releases.flowplayer.org/quality-selector/flowplayer.quality-selector.css">
+   
+   <!-- Minimal styling for this standalone page, can be removed -->
+   <!-- <link rel="stylesheet" href="http://demos.flowplayer.org/media/css/demo.css"> -->
+   <!-- Syntax highlighting of source code, can be removed -->
+   <!-- <link rel="stylesheet" href="http://demos.flowplayer.org/media/css/pygments.css">-->
+   
+
+         <!-- Flowplayer library -->
+   <script src="//releases.flowplayer.org/6.0.5/flowplayer.min.js"></script>
+         <!-- The hlsjs plugin for playback of HLS without Flash in modern browsers -->
+   <script src="//releases.flowplayer.org/hlsjs/flowplayer.hlsjs.min.js"></script>
+            <!-- the quality selector plugin -->
+   <script src="//releases.flowplayer.org/quality-selector/flowplayer.quality-selector.min.js"></script>
+      
+   
+<script>
+window.onload = function () {
+
+
+  flowplayer("#hlsjslive", {
+    splash: true,
+    embed: false,
+    ratio: 9/16,
+
+    clip: {
+      live: true,
+      sources: [
+        { type: "application/x-mpegurl",
+          src: "http://192.168.0.19/playlist.m3u8" }
+      ]
+    }
+
+  });
+
+};
+</script>
+
+	<script src="https://code.jquery.com/jquery.min.js"></script>
 <script>
     // Running in electron
     try {
@@ -13,12 +59,33 @@
 
     <link rel="stylesheet" href="http://openlayers.org/en/v3.8.2/css/ol.css" type="text/css">
     <style>
+<!-- #hlsjsvod { background-image: url(//drive.cdn.flowplayer.org/202777/84049-snap.jpg); } -->
+#hlsjslive {
+  background-color: #2f2f4f;
+  width: 600px; 
+  height: 335px;
+  position: absolute;
+  right: 20px;
+  margin-top: 100px;
+}
+
+.hlsjs-supported {
+  font-weight: bold;
+}
 #header { 
   position: absolute;
   left: 20px;
   color: white;
   z-index: 100;
-  font-family: Sans;
+  font-family: Arial;
+  margin-top: 20px;
+}
+#header2 { 
+  position: absolute;
+  right: 20px;
+  color: black;
+  z-index: 100;
+  font-family: Arial;
   margin-top: 20px;
 }
 html, body, .map {
@@ -47,10 +114,20 @@ window.top.postMessage('gcs', '*');
     <script src="http://openlayers.org/en/v3.8.2/build/ol.js" type="text/javascript"></script>
     <title>Tower for Desktop</title>
   </head>
-  <body class="disabled">
+  <body> <!--class="disabled">-->
+      <!--Flowplayer-->
+  
+  <div id="header2">
+
+      <h1 >Live Broadcast</h1>
+      </div>
+
+
+<div id="hlsjslive" class="is-closeable"></div>
+
     <div id="header">
       {% if branding %}
-        <h1>Tower</h1>
+        <h1>Pylot</h1>
       {% endif %}
       <button id="header-center">Center Map</button>
       <p id="header-state"><b>Armed:</b> ???<br><b>Mode:</b> ??? <br><b>Altitude:</b> ???</p>
@@ -61,5 +138,7 @@ window.top.postMessage('gcs', '*');
     <div id="map" class="map"></div>
 
     <script type="text/javascript" src="/static/scripts/realtime.js"></script>
-  </body>
+  
+
+ </body>
 </html>
