--- a/tower/templates/index.html
+++ b/tower/templates/index.html
@@ -38,7 +38,7 @@ window.onload = function () {
       live: true,
       sources: [
         { type: "application/x-mpegurl",
-          src: "http://192.168.0.19/playlist.m3u8" }
+          src: "http://192.168.0.19/var/www/html/playlist.m3u8" }
       ]
     }
 
