--- a/tower/templates/index.html
+++ b/tower/templates/index.html
@@ -5,16 +5,14 @@
    
    <!-- optimize mobile versions -->
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-   
+   <!-- CSS  -->
+  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+  <link href="./css/materialize.css" type="text/css" rel="stylesheet" media="screen,projection"/>
       <!-- The "minimalist" skin - choose from: "functional.css", "minimalist.css", "playful.css" -->
+   
    <link rel="stylesheet" href="//releases.flowplayer.org/6.0.5/skin/minimalist.css">
       <!-- the quality selector stylesheet -->
    <link rel="stylesheet" href="//releases.flowplayer.org/quality-selector/flowplayer.quality-selector.css">
-   
-   <!-- Minimal styling for this standalone page, can be removed -->
-   <!-- <link rel="stylesheet" href="http://demos.flowplayer.org/media/css/demo.css"> -->
-   <!-- Syntax highlighting of source code, can be removed -->
-   <!-- <link rel="stylesheet" href="http://demos.flowplayer.org/media/css/pygments.css">-->
    
 
          <!-- Flowplayer library -->
@@ -23,7 +21,7 @@
    <script src="//releases.flowplayer.org/hlsjs/flowplayer.hlsjs.min.js"></script>
             <!-- the quality selector plugin -->
    <script src="//releases.flowplayer.org/quality-selector/flowplayer.quality-selector.min.js"></script>
-      
+   <script src="https://code.jquery.com/jquery-2.1.1.min.js"></script>   
    
 <script>
 window.onload = function () {
@@ -32,13 +30,14 @@ window.onload = function () {
   flowplayer("#hlsjslive", {
     splash: true,
     embed: false,
-    ratio: 9/16,
+    autoplay: true,
+	ratio: 9/16,
 
     clip: {
-      live: true,
-      sources: [
+	 <!-- loop: true, -->
+	  sources: [
         { type: "application/x-mpegurl",
-          src: "http://192.168.0.19/var/www/html/playlist.m3u8" }
+          src: "playlist.m3u8" }
       ]
     }
 
@@ -47,7 +46,7 @@ window.onload = function () {
 };
 </script>
 
-	<script src="https://code.jquery.com/jquery.min.js"></script>
+<!--	<script src="https://code.jquery.com/jquery.min.js"></script-->
 <script>
     // Running in electron
     try {
@@ -59,14 +58,21 @@ window.onload = function () {
 
     <link rel="stylesheet" href="http://openlayers.org/en/v3.8.2/css/ol.css" type="text/css">
     <style>
-<!-- #hlsjsvod { background-image: url(//drive.cdn.flowplayer.org/202777/84049-snap.jpg); } -->
 #hlsjslive {
   background-color: #2f2f4f;
-  width: 600px; 
-  height: 335px;
+  display: block;
+  border-radius: 2px 2px 0 0;
+  position: relative;
+  left: 0;
+  right: 0;
+  top: 0;
+  bottom: 0;
+  width: 100%;
+  /*width: 500px; 
+  height: 280px;
   position: absolute;
-  right: 20px;
-  margin-top: 100px;
+  right: 0px;
+  margin-top: 0px;*/
 }
 
 .hlsjs-supported {
@@ -75,18 +81,16 @@ window.onload = function () {
 #header { 
   position: absolute;
   left: 20px;
-  color: white;
+  color: black;
   z-index: 100;
-  font-family: Arial;
-  margin-top: 20px;
+  margin-top: 40px;
 }
 #header2 { 
   position: absolute;
   right: 20px;
   color: black;
   z-index: 100;
-  font-family: Arial;
-  margin-top: 20px;
+  margin-top: 40px;
 }
 html, body, .map {
   margin: 0;
@@ -112,33 +116,63 @@ window.top.postMessage('gcs', '*');
     </script>
 
     <script src="http://openlayers.org/en/v3.8.2/build/ol.js" type="text/javascript"></script>
-    <title>Tower for Desktop</title>
+    <title>unleash Control Center</title>
   </head>
   <body> <!--class="disabled">-->
-      <!--Flowplayer-->
-  
-  <div id="header2">
-
-      <h1 >Live Broadcast</h1>
-      </div>
-
-
-<div id="hlsjslive" class="is-closeable"></div>
-
-    <div id="header">
-      {% if branding %}
-        <h1>Pylot</h1>
-      {% endif %}
-      <button id="header-center">Center Map</button>
+ 
+	
+    <div class="row">
+        <div class="col s12 m4">
+          <div class="card blue-grey darken-1">
+            <div class="card-content white-text">
+              <!--{% if branding %}-->
+              <span class="card-title">
+        unleash
+      </span>
+      <!--{% endif %}-->
+              
       <p id="header-state"><b>Armed:</b> ???<br><b>Mode:</b> ??? <br><b>Altitude:</b> ???</p>
-      <button id="header-arm">ARM</button>
-      <button id="header-mode-loiter">Loiter</button>
-      <button id="header-mode-stabilize">Stabilize</button>
-    </div>
+      
+            </div>
+            <div class="card-action">
+            <a id="header-arm"><i class="material-icons left">vpn_key</i>ARM</a>
+      		<a id="header-mode-loiter">Loiter</a>
+      		<a id="header-mode-stabilize">Stable</a>
+            </div>
+          </div>
+        </div>
+      </div>
+    <div class="row">
+        <div class="col s12 m4">
+          <div class="card">
+            <div class="card-image">
+                <!--Flowplayer-->
+            <div id="hlsjslive" class="is-closeable">
+              <span class="card-title">Live Broadcast</span>
+              </div>
+            </div>
+            
+            <!--div class="card-content">
+              <p>Lorem ipsum</p>
+            </div-->
+            <div class="card-action">
+              <a href="index.php"><i class="material-icons left">camera</i>View Media Gallery</a>
+            </div>
+          </div>
+          </div>
+        </div>
+    <div class="row">
+        <div class="col s12 m4">   
+     <a class="btn-floating btn-large waves-effect waves-light red" id="header-center"><i class="material-icons">my_location</i></a>
+      </div>
+      </div>
+ 
     <div id="map" class="map"></div>
 
     <script type="text/javascript" src="/static/scripts/realtime.js"></script>
-  
+  <!--  Materialize Scripts-->
+
+  <script type="text/javascript" src="./js/materialize.min.js"></script>
 
  </body>
 </html>
