--- a/tower/templates/index.html
+++ b/tower/templates/index.html
@@ -1,52 +1,7 @@
 <!doctype html>
 <html lang="en">
   <head>
-    <meta charset="utf-8">
-   
-   <!-- optimize mobile versions -->
-   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-   <!-- CSS  -->
-  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-  <link href="./css/materialize.css" type="text/css" rel="stylesheet" media="screen,projection"/>
-      <!-- The "minimalist" skin - choose from: "functional.css", "minimalist.css", "playful.css" -->
-   
-   <link rel="stylesheet" href="//releases.flowplayer.org/6.0.5/skin/minimalist.css">
-      <!-- the quality selector stylesheet -->
-   <link rel="stylesheet" href="//releases.flowplayer.org/quality-selector/flowplayer.quality-selector.css">
-   
-
-         <!-- Flowplayer library -->
-   <script src="//releases.flowplayer.org/6.0.5/flowplayer.min.js"></script>
-         <!-- The hlsjs plugin for playback of HLS without Flash in modern browsers -->
-   <script src="//releases.flowplayer.org/hlsjs/flowplayer.hlsjs.min.js"></script>
-            <!-- the quality selector plugin -->
-   <script src="//releases.flowplayer.org/quality-selector/flowplayer.quality-selector.min.js"></script>
-   <script src="https://code.jquery.com/jquery-2.1.1.min.js"></script>   
-   
-<script>
-window.onload = function () {
-
-
-  flowplayer("#hlsjslive", {
-    splash: true,
-    embed: false,
-    autoplay: true,
-	ratio: 9/16,
-
-    clip: {
-	 <!-- loop: true, -->
-	  sources: [
-        { type: "application/x-mpegurl",
-          src: "playlist/playlist.m3u8" }
-      ]
-    }
-
-  });
-
-};
-</script>
-
-<!--	<script src="https://code.jquery.com/jquery.min.js"></script-->
+    <script src="https://code.jquery.com/jquery.min.js"></script>
 <script>
     // Running in electron
     try {
@@ -58,39 +13,13 @@ window.onload = function () {
 
     <link rel="stylesheet" href="http://openlayers.org/en/v3.8.2/css/ol.css" type="text/css">
     <style>
-#hlsjslive {
-  background-color: #2f2f4f;
-  display: block;
-  border-radius: 2px 2px 0 0;
-  position: relative;
-  left: 0;
-  right: 0;
-  top: 0;
-  bottom: 0;
-  width: 100%;
-  /*width: 500px; 
-  height: 280px;
-  position: absolute;
-  right: 0px;
-  margin-top: 0px;*/
-}
-
-.hlsjs-supported {
-  font-weight: bold;
-}
 #header { 
   position: absolute;
   left: 20px;
-  color: black;
+  color: white;
   z-index: 100;
-  margin-top: 40px;
-}
-#header2 { 
-  position: absolute;
-  right: 20px;
-  color: black;
-  z-index: 100;
-  margin-top: 40px;
+  font-family: Sans;
+  margin-top: 20px;
 }
 html, body, .map {
   margin: 0;
@@ -116,74 +45,22 @@ window.top.postMessage('gcs', '*');
     </script>
 
     <script src="http://openlayers.org/en/v3.8.2/build/ol.js" type="text/javascript"></script>
-    <title>unleash Control Center</title>
+    <title>Tower for Desktop</title>
   </head>
-  <body> <!--class="disabled">-->
- 
-	
-    <div class="row">
-        <div class="col s12 m4">
-          <div class="card blue-grey darken-1">
-            <div class="card-content white-text">
-              <!--{% if branding %}-->
-              <span class="card-title">
-        unleash <sup>air</sup>
-      </span>
-      <!--{% endif %}-->
-              
+  <body class="disabled">
+    <div id="header">
+      {% if branding %}
+        <h1>Tower</h1>
+      {% endif %}
+      <button id="header-center">Center Map</button>
       <p id="header-state"><b>Armed:</b> ???<br><b>Mode:</b> ??? <br><b>Altitude:</b> ???</p>
-      
-            </div>
-            <div class="card-action">
-            <a href="index.php?mav=true"><i class="material-icons left">power_settings_new</i></a>
-            <a id="header-arm">ARM</a>
-      		<a id="header-mode-loiter">Loiter</a>
-      		<a id="header-mode-stabilize">Stable</a>
-            </div>
-          </div>
-        </div>
- 
-  
-    
-      <!-- This link will add ?run=true to your URL, myfilename.php?run=true -->
-<div class="fixed-action-btn horizontal" style="bottom: 45px; right: 24px;">
-    <a class="btn-floating btn-large red">
-      <i class="large material-icons">mode_edit</i>
-    </a>
-    <ul>
-      <li><a class="btn-floating green" href="index.php?run=true"><i class="material-icons">videocam</i></a></li>	      <li><a class="btn-floating red" href="index.php?stop=true"><i class="material-icons">videocam_off</i></a></li>
-      <li><a class="btn-floating blue" id="header-center"><i class="material-icons">my_location</i></a></li>
-    </ul>
-  </div>
- 
-</div>
-    <div class="row">
-        <div class="col s12 m4">
-          <div class="card">
-            <div class="card-image">
-                <!--Flowplayer-->
-            <div id="hlsjslive" class="is-closeable">
-              <span class="card-title">Live Broadcast</span>
-              </div>
-            </div>
-            
-            <!--div class="card-content">
-              <p>Lorem ipsum</p>
-            </div-->
-            <div class="card-action">
-              <a href="index.php"><i class="material-icons left">camera</i>View Media Gallery</a>
-            </div>
-          </div>
-          </div>
-        </div>
-      </div>
- 
+      <button id="header-arm">ARM</button>
+      <button id="header-mode-guided">Guided</button>
+      <button id="header-simple-takeoff">Takeoff</button>
+      <button id="header-mode-rtl">RTL</button>
+    </div>
     <div id="map" class="map"></div>
 
     <script type="text/javascript" src="/static/scripts/realtime.js"></script>
-  <!--  Materialize Scripts-->
-
-  <script type="text/javascript" src="./js/materialize.min.js"></script>
-
- </body>
+  </body>
 </html>
