--- a/tower/templates/index.html
+++ b/tower/templates/index.html
@@ -1,7 +1,13 @@
 <!doctype html>
 <html lang="en">
   <head>
-    <script src="https://code.jquery.com/jquery.min.js"></script>
+  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.6/css/materialize.min.css" type="text/css" media="screen,projection"/>
+  <!--Let browser know website is optimized for mobile-->
+      <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+      
+	<script src="https://code.jquery.com/jquery.min.js"></script>
+    
 <script>
     // Running in electron
     try {
@@ -18,7 +24,7 @@
   left: 20px;
   color: white;
   z-index: 100;
-  font-family: Sans;
+  /*font-family: Sans;*/
   margin-top: 20px;
 }
 html, body, .map {
@@ -38,6 +44,13 @@ body.disabled {
   filter: contrast(30%);
   -webkit-filter: contrast(30%);
 }
+.opaque {
+	opacity: 0.8 !important;
+}
+.glass {
+	background-color: rgba(0,0,0,0.2) !important;
+}
+	
     </style>
 
     <script>
@@ -45,19 +58,36 @@ window.top.postMessage('gcs', '*');
     </script>
 
     <script src="http://openlayers.org/en/v3.8.2/build/ol.js" type="text/javascript"></script>
-    <title>Tower for Desktop</title>
+    <title>unleash tower</title>
   </head>
-  <body class="disabled">
+  <body> <!--class="disabled"-->
     <div id="header">
       {% if branding %}
-        <h1>Tower</h1>
+        <h1>unleash tower</h1>
       {% endif %}
-      <button id="header-center">Center Map</button>
-      <p id="header-state"><b>Armed:</b> ???<br><b>Mode:</b> ??? <br><b>Altitude:</b> ???</p>
-      <button id="header-arm">ARM</button>
-      <button id="header-mode-guided">Guided</button>
-      <button id="header-simple-takeoff">Takeoff</button>
-      <button id="header-mode-rtl">RTL</button>
+      <a class="btn-floating opaque disabled" id="header-center"><i class="material-icons">my_location</i></a>
+      <a class="waves-effect waves opaque red btn" id="header-arm">ARM</a>
+      <a class="waves-effect waves opaque green btn" id="header-mode-guided">Guided</a>
+      
+      <div class="card-panel glass">
+      <h4><p id="header-state"><b>Armed:</b> ???<br><b>Mode:</b> ??? <br><b>Altitude:</b> ???</p></h4>
+      </div>
+      <p>
+      <a class="waves-effect waves opaque light-green btn" id="header-simple-takeoff">Takeoff</a>
+      <a class="waves-effect waves opaque light-green btn" id="header-mode-rtl">Return to Land</a>
+      </p>
+      <br>
+      <p>
+    <a class="btn-floating btn-large opaque blue" id="header-left"><i class="medium material-icons">arrow_back</i></a>
+    <a class="btn-floating btn-large opaque blue" id="header-right"><i class="medium material-icons">arrow_forward</i></a>
+    <a class="btn-floating btn-large opaque blue" id="header-forward"><i class="medium material-icons">arrow_upward</i></a>
+    <a class="btn-floating btn-large opaque blue" id="header-back"><i class="medium material-icons">arrow_downward</i></a>
+    <a class="btn-floating btn-large opaque light-blue" id="header-yaw"><i class="medium material-icons">forward_5</i></a>
+    </p>
+    <p>
+    <a class="btn-floating btn-large opaque green" id="header-up"><i class="material-icons">add</i></a>
+    <a class="btn-floating btn-large opaque red" id="header-down"><i class="material-icons">remove</i></a>
+    </p>
     </div>
     <div id="map" class="map"></div>
 
